objects/vlocity_ins__ErrorCode__c.object
<CustomObject>
    <fields>
        <fullName>vlocity_ins__ErrorCode__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Error Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__GlobalKey__c</fullName>
        <description>The globally unique identifier of the Product. Used to identify the product across Salesforce instances.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Global Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Namespace__c</fullName>
        <label>Namespace</label>
        <referenceTo>vlocity_ins__ErrorCodeNamespace__c</referenceTo>
        <relationshipLabel>Error Codes</relationshipLabel>
        <relationshipName>Namespace</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Semantics__c</fullName>
        <label>Semantics</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not an error</fullName>
                </value>
                <value>
                    <fullName>Retriable</fullName>
                </value>
                <value>
                    <fullName>Fatal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Error Code</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Error Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Error Codes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>